nav overflow issue

--- a/src/app/views/sidebar/container/sidebar.container.scss
+++ b/src/app/views/sidebar/container/sidebar.container.scss
@@ -1,7 +1,8 @@
 @import '~sass/main';
 
 .nav {
-    background-color: lighten(map-get($color, background), 10%);
+    background-color: lighten(map-get($color, background), 15%);
     width: 160px;
     height: 100%;
+    overflow: hidden;
 }
